# python-package

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  .secrets_example  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  __init__.py.md  noxfile.py  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: check.yml  codecov.yml  commitlint.yml  docs.yml  lint.yml  release_package.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  prototype_python_library.rst  usage.rst
prototype_python_library/: __init__.py  cli.py
template_pyproject/: __init__.py  cli.py
tests/: __init__.py  test_cli.py  test_prototype_python_library.py  test_python_package.py  test_template_pyproject.py
