[tool.poetry]
name = "prototype-python-library"
version = "0.4.0"
description = "A prototype python library."
authors = ["Nuno Costa <91nunocosta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
coverage-badge = "^1.0.2"
pre-commit = "^2.15.0"
python-semantic-release = "^7.23.0"
yamllint = "^1.26.3"
tox = "^3.24.4"
pydocstyle = "^6.1.1"
mypy = "^0.910"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "prototype_python_library/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
