[tool.poetry]
name = "prototype-python-library"
version = "0.1.0"
license = "MIT"
description = "Prototype Python Library"
authors = ["Nuno Costa <91nunocosta@gmail.com>"]
readme = "README.md"
repository = "https://github.com/91nunocosta/prototype-python-library/"
documentation = "https://91nunocosta.github.io/prototype-python-library/prototype_python_library.html"

[tool.poetry.scripts]
prototype-python-library = "prototype_python_library.cli:app"
[tool.poetry.dependencies]
python = ">=3.8,<4.0"
typer = {extras = ["all"], version = "^0.7.0"}
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.2.1"
mypy = "^1.0.0"
pylint = "^2.16.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^12.3.1"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
python-semantic-release = "^7.33.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "prototype_python_library/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
build_command = "pip install poetry && poetry build"
upload_to_release = true

upload_to_repository = true
